<resources>
    <string name="app_name">DoAn</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="signUpPrompt">Don"'t have an account?</string>
    <string name="signUpLink"><u>Sign up</u></string>
    <string name="loginPrompt">Already have an account?</string>
    <string name="loginLink"><u>Login</u></string>
    <string name="forgotPasswordPrompt">Forgot password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="top"><b>Top</b></string>
    <string name="tours"><b>Tours</b></string>
    <string name="forYou">for you</string>
    <string name="tourNamePH">Nha Trang to Ho Chi Minh</string>
    <string name="tourPricePH">500, 000 - 1, 000, 000</string>
    <string name="tourStartDatePH">17/08/2019</string>
    <string name="tourEndDatePH">19/08/2019</string>
    <string name="tourPeoplePH">max 3</string>
    <string name="title_topTours">Top tours</string>
    <string name="title_history">History</string>
    <string name="title_explore">Explore</string>
    <string name="title_settings">Settings</string>
    <string name="title_addTour">Add tour</string>
    <string name="tourNamePrompt">Tour name</string>
    <string name="privateAttr">Private</string>
    <string name="statusAttr">Status</string>
    <string name="startDateAttr">Start date</string>
    <string name="endDateAttr">End date</string>
    <string name="budgetAttr">Budget</string>
    <string name="startLocationAttr">Start Location</string>
    <string name="endLocationAttr">End Location</string>
    <string name="to">-</string>
    <string name="stopPointName">Stop point name</string>
    <string name="serviceType">Service type</string>
    <string name="address">Address</string>
    <string name="arrival">Arrival</string>
    <string name="leave">Leave</string>
    <string name="saved">Saved</string>
    <string name="stopPoint">Stop Points</string>
    <string name="savedStopPointNamePH">Hotel California</string>
    <string name="savedStopPointAddressPH">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="splashText1">Keep</string>
    <string name="splashText2">Exploring!</string>
    <string name="privacyPH">Public tour</string>
    <string name="tourStatusPH">Ongoing</string>
    <string name="ratings">Ratings</string>
    <string name="commentPrompt">Type your comment</string>
    <string name="userPH">Username</string>
    <string name="startTour">Start tour</string>
    <string name="tourInfo">Tour Info</string>
    <string name="ratePrompt">Rate</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="yourComment">Enter your comment here!</string>
    <string name="members">Members</string>
    <string name="chat">Chat</string>
    <string name="addMembers">Add member</string>
    <string name="notAMember">You must be a member of this tour to use this function!</string>
    <string name="my">My</string>
    <string name="stopPointInfo">Stop Point Info</string>
    <string name="restaurant">Restaurant</string>
    <string name="forgotPassword">Password Recovery</string>
    <string name="or">Or</string>
    <string name="recover">Recover</string>
    <string name="report">Report</string>
    <string name="contact">Phone number</string>
    <string name="contactPH">0927887229</string>
    <string name="invitation">You got invited to !</string>
    <string name="invitationPH">You got invited to Nha Trang To Vung Tau! </string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="addMember">Add member</string>
    <string name="addMemberPrompt">Your buddy\'s name here</string>
    <string name="invite">Invite</string>
    <string name="OTPPrompt">Type your OTP here</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordConfirm">Confirm new password</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="hello">Hello, </string>
    <string name="usernamePH">lmt99</string>
    <string name="editInfo">Edit user\'s info</string>
    <string name="logout">Logout</string>
    <string name="fullName">Full name</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="saySomething">Say something!</string>
    <string name="sent">sent a </string>
    <string name="policeStationPH">Somebody sent a <b>Poilice Station</b> warning from Tour XYZ!</string>
    <string name="sendNotifications">Events</string>
    <string name="voiceRecord">Send Record</string>
    <string name="currentPosition">Location</string>
    <string name="dialog1Title">Select an event</string>
    <string name="policeStation">Police Station</string>
    <string name="problemsOnRoad">Road problems</string>
    <string name="speedLimitSign">Speed limit</string>
    <string name="trackTour">Track tour</string>
    <string name="notificationMsg">Type your message</string>
    <string name="notificationMsgVelocity">Velocity (for speed signs)</string>
    <string name="delete">Delete</string>
    <string name="record">Audio record</string>
    <string name="play">Play</string>
    <string name="recordComplete">Your record is finished!</string>
    <string name="recordPrompt">Record</string>
    <string name="stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="title_activity_stop_points">Map</string>

    <!--Facebook Login-->
    <string name="facebook_app_id">2572918352776741</string>
    <string name="fb_login_protocol_scheme">fb2572918352776741</string>
</resources>
