<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordRecovery">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/forgotPassword"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_forgot_password" />

        <EditText
            android:id="@+id/passwordRecoveryEmail"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordRecoveryEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/or"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordRecoveryPhone"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@+id/title2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/passwordRecoveryPhone"
            android:id="@+id/passwordRecoverySubmit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:fontFamily="@font/quicksand"
            android:text="@string/recover"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:textColor="@color/textColor"
            android:textStyle="normal" />



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>