<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/signUpImg"
            android:layout_width="270dp"
            android:layout_height="215dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_sign_up" />

        <EditText
            android:id="@+id/phoneSignUp"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordConfirmSignUp"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:fontFamily="@font/quicksand"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="normal"
            android:elevation="0dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="30dp">
            <ImageButton
                android:id="@+id/signUpGoogle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_icons8_google"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="30dp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/signUpFacebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:src="@drawable/ic_icons8_facebook" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/loginPrompt"
                android:textAlignment="center"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/loginLink"
                android:textAlignment="center"
                android:textColor="@color/linkColor" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>



</RelativeLayout>