<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordRecovery_OTP">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/passwordRecoveryOTPBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_left"
            android:background="@android:color/transparent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/forgotPassword"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_forgot_password" />




        <EditText
            android:id="@+id/passwordRecoveryOTP"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/OTPPrompt"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordRecoveryNewPassword"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordRecoveryOTP"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordRecoveryNewPasswordConfirm"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordRecoveryNewPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/form"
            android:fontFamily="@font/quicksand"
            android:hint="@string/newPasswordConfirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/passwordRecoveryNewPasswordConfirm"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/passwordRecoveryOTPSubmit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:fontFamily="@font/quicksand"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:elevation="0dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/textColor"
                android:textStyle="normal" />
            <Button
                android:layout_marginStart="10dp"
                android:id="@+id/passwordRecoveryOTPResend"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/resendOTP"
                android:textAllCaps="false"
                android:elevation="0dp"
                android:textColor="@color/textColor"
                android:textStyle="normal" />

        </LinearLayout>



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>