<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/loginImg"
            android:layout_width="309dp"
            android:layout_height="261dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_sign_in" />

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:background="@drawable/form"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:background="@drawable/form"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordPrompt"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="30dp">
            <ImageButton
                android:id="@+id/loginGoogle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_icons8_google"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="30dp"/>

            <ImageButton
                android:id="@+id/loginFacebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:src="@drawable/ic_icons8_facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpPrompt"
                android:textAlignment="center"
                android:textColor="@color/textColor"/>
            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpLink"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:textColor="@color/linkColor"
                />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>